  * Check for readline/readline.h header before configuring for readline
  * Improve system bfd library location detection
  * Make sure external gmp lib is compatible via __GNU_MP_VERSION, else
    backoff to local gmp build;  prepend externally defined CFLAGS into
    output CFLAGS, FINAL_CFLAGS, and NIFLAGS
  * Remove --enable-gmp configure option; gmp is required for GCL

 -- Camm Maguire <camm@enhanced.com>  Mon, 17 Nov 2003 14:55:28 +0000

gcl (2.6.1-18) unstable; urgency=low

  * Portability patches to makefiles to support non-GNU grep (no -q),
    and non-bash sh, C_INCLUDE_PATH=...;export C_INCLUDE_PATH
  * copy the global *info* parameter in c1flet and c1labels to prevent
    accumulation of old data -- FIXME -- make sure there are no other
    copies required, and eventually replace this global parameter with
    local variables
  * Turn on some optimization on hppa, -O only
  * Make all C defined functions installed into lisp static functions to
    work around dynamic function descriptors on ia64, Closes: #217484,
    Closes: #204789, (STATIC_FUNCTION_POINTERS define in config.h)

 -- Camm Maguire <camm@enhanced.com>  Thu,  6 Nov 2003 15:40:25 +0000

gcl (2.6.1-17) unstable; urgency=low

  * Repair weak symbol addition to the bfd symbol table in sfasli.c
  * Be more thorough about adding fun-info to call-local info in
    gcl_cmpflet.lsp, accompanying simplifications in gcl_cmpeval.lsp
    (call-global lists have info updated by args already in (c1args args
    info)), small changes in add-info in gcl_cmpinline.lsp, FIXME --
    study rational for *info* special variable in certain places as
    opposed to more common copy-info

 -- Camm Maguire <camm@enhanced.com>  Thu, 30 Oct 2003 20:03:22 -0500

gcl (2.6.1-16) unstable; urgency=low

  * Fix sh syntax in debian/gcl.sh
  * init_or_load1 -> gcl_init_or_load1 in xgcl-2/sysinit.lsp
  * Load weak symbols as well as undefined symbols in
    bfd_build_symbol_table, for the purposes of the static build