@@ -46,9 +46,11 @@ AC_ARG_ENABLE(tclconfig,[ --enable-tclconfig=XXXX will force the use of a TCL_CO
 
 AC_ARG_ENABLE(infodir,[ --enable-infodir=XXXX will force the use of a INFO_DIR=XXXXX as place to look for info ] ,
 [INFO_DIR=$enableval],[INFO_DIR="unknown"])
+INFO_DIR=`eval echo $INFO_DIR/`
 
 AC_ARG_ENABLE(emacsdir,[ --enable-emacsdir=XXXX will manually specify the location for elisp files ] ,
 [EMACS_SITE_LISP=$enableval],[EMACS_SITE_LISP="unknown"])
+EMACS_SITE_LISP=`eval echo $EMACS_SITE_LISP`
 
 AC_ARG_ENABLE(common-binary,[ --enable-common-binary=yes forces use of lowest common denominator instruction sets, (default is =yes)] ,
 [use_common_binary=$enableval],[use_common_binary="yes"])
@@ -1254,7 +1256,7 @@ else
 	EMACS_DEFAULT_EL=""
 fi
 if  test -f "${EMACS_DEFAULT_EL}"  ; then true;else
-  if test -d "$EMACS_SITE_LISP" ; then
+  if test -d $EMACS_SITE_LISP ; then
      EMACS_DEFAULT_EL=${EMACS_SITE_LISP}/default.el
   fi
 fi
@@ -1284,7 +1286,7 @@ else
     fi
 fi
 if  test -f "${INFO_DIR}dir"  ; then true;else
-if test -f /usr/info/dir ; then
+if test -f /usr/share/info/dir ; then
   INFO_DIR=/usr/share/info/
 else true;
 fi
