@@ -11,8 +11,10 @@ gcl (2.6.1-19) unstable; urgency=low
     backoff to local gmp build;  prepend externally defined CFLAGS into
     output CFLAGS, FINAL_CFLAGS, and NIFLAGS
   * Remove --enable-gmp configure option; gmp is required for GCL
+  * Use --enable-emacsdir in debian/rules, make sure --enable-emacsdir
+    and --enable-infodir work when arg contains ${prefix}
 
- -- Camm Maguire <camm@enhanced.com>  Mon, 17 Nov 2003 14:55:28 +0000
+ -- Camm Maguire <camm@enhanced.com>  Mon, 17 Nov 2003 18:05:49 +0000
 
 gcl (2.6.1-18) unstable; urgency=low
 
